--- a/web/src/styles/pages/Playground.module.css
+++ b/web/src/styles/pages/Playground.module.css
@@ -1,76 +1,179 @@
 /* PC */
 @media (min-width: 720px) {
-  .container{
+  .container {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f3f5ff;
+    background-image: url(../../assets/background-brand.png);
+    background-repeat: no-repeat;
+    background-position: -25rem 40rem;
+
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 0 2.4rem;
+  }
+
+  .content {
+    max-width: 90rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+    align-items: center;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .petName {
+    font-weight: 600;
+    font-size: 2.4rem;
+    color: #566dea;
+  }
+
+  .border {
+    background-color: #fff;
+    border-radius: 0.8rem;
+
+    display: flex;
+    flex-direction: column;
+
+    margin: 0.8rem;
+
+    padding: 0.8rem;
+
+    width: 52rem;
+    height: 30rem;
+
+    border: 2px solid #566dea;
+  }
+
+  .bgDocumentContent {
+    width: 100%;
+    height: fit-content;
+    padding: 0.8rem;
+    border-radius: 0.8rem;
+    background-color: #566dea;
 
     display: flex;
     align-items: center;
-    justify-content: center;
-
-    background-color: #CCC;
+    gap: 0.8rem;
   }
-  .content{
-    max-width: 1000px;
-    width: 100%;
+
+  .documentTitle {
+    color: #fff;
+  }
+
+  .petData{
+    display: flex;
+    flex-direction: row;
+    margin: 0.8rem 0;
+    gap: 0.8rem;
+  }
+
+  .imageFrame{
+    width: 18rem;
+    height: 21.5rem;
+    background-color: #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+  }
+
+  .qrCodeFrame{
+    width: 20rem;
+    height: 20rem;
+    border: 2px solid #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
     
     display: flex;
     align-items: center;
     justify-content: center;
-
-    background-color: #FFF;
-    border: 1px solid #000;
-    border-radius: 0.8rem;
-    padding: 0.8rem 1.4rem;
   }
 }
 /* Tablet */
 @media (min-width: 320px) and (max-width: 720px) {
-  .container{
+  .container {
     width: 100vw;
     height: 100vh;
-
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    background-color: #f3f5ff;
+    background-image: url(../../assets/background-brand.png);
+    background-repeat: no-repeat;
+    background-position: -25rem 80rem;
 
-    background-color: #CCC;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 0 2.4rem;
   }
-  .content{
-    max-width: 1000px;
-    width: 100%;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
-    background-color: #FFF;
-    border: 1px solid #000;
-    border-radius: 0.8rem;
-    padding: 0.8rem 1.4rem;
-  }}
+  .content {
+    max-width: 70rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+    align-items: center;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .petName {
+    font-weight: 600;
+    font-size: 2.4rem;
+    color: #566dea;
+  }
+}
 /* Celular */
 @media (max-width: 320px) {
-  .container{
+  .container {
     width: 100vw;
     height: 100vh;
-
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    background-color: #f3f5ff;
+    background-image: url(../../assets/background-brand.png);
+    background-repeat: no-repeat;
+    background-position: -25rem 80rem;
+    background-size: auto 45rem;
 
-    background-color: #CCC;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 0 2.4rem;
   }
-  .content{
-    max-width: 1000px;
-    width: 100%;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
-    background-color: #FFF;
-    border: 1px solid #000;
-    border-radius: 0.8rem;
-    padding: 0.8rem 1.4rem;
-  }}
+  .content {
+    max-width: 32rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.4rem;
+    justify-content: center;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .petName {
+    font-weight: 600;
+    font-size: 2.4rem;
+    color: #566dea;
+  }
+}
