ajustes nos layouts

--- a/web/src/styles/components/Footer.module.css
+++ b/web/src/styles/components/Footer.module.css
@@ -45,7 +45,7 @@
 }
 
 @media (max-width: 720px) {
-   footer {
+   .footer {
     background-color: #232323;
     width: 100vw;
     display: flex;
