--- a/web/src/styles/pages/tutor/PetProfile.module.css
+++ b/web/src/styles/pages/tutor/PetProfile.module.css
@@ -181,6 +181,7 @@
   }
 
   .wContainer svg {
+    color: #566dea;
     fill: #566dea;
   }
 
@@ -283,6 +284,7 @@
   }
 
   .wContainer svg {
+    color: #566dea;
     fill: #566dea;
   }
 
