--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -264,6 +264,53 @@ main {
   background-color: #263481;
 }
 
+.video {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 12px;
+  margin: 0 0 2.4rem 0;
+}
+.video h2 {
+  margin-bottom: 2.4rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.video iframe{
+  max-width: 72rem;
+  width: 100%;
+  height: 41.2rem;
+  display: flex;
+  padding: 0.8rem;
+  margin: 1.4rem;
+  background-color: #566dea;
+  border-radius: 0.8rem;
+}
+
+.video button {
+  outline: none;
+  border: none;
+  display: block;
+  text-align: center;
+  background-color: #566dea;
+  color: #fff !important;
+  padding: 1.4rem 0.8rem;
+  text-decoration: none !important;
+  border-radius: 10px;
+  text-decoration: none;
+  box-shadow: 3px 3px 4px #b5b5b5;
+  transition: all 0.3s ease;
+}
+
+.video button:hover {
+  background-color: #263481;
+}
+
 .features {
   width: 100vw;
   max-width: 980px;
