--- a/web/src/styles/pages/tutor/PetHistory.module.css
+++ b/web/src/styles/pages/tutor/PetHistory.module.css
@@ -17,6 +17,7 @@
   }
 
   .content {
+    width: 100%;
     max-width: 90rem;
     display: flex;
     flex-direction: column;
@@ -67,6 +68,8 @@
   }
 
   .headerTitle {
+    width: 100%;
+    text-align: center;
     color: #566dea;
     font-weight: 400;
     font-size: 2.4rem;
@@ -156,6 +159,7 @@
   }
 
   .content {
+    width: 100%;
     max-width: 70rem;
     display: flex;
     flex-direction: column;
@@ -206,6 +210,8 @@
   }
 
   .headerTitle {
+    width: 100%;
+    text-align: center;
     color: #566dea;
     font-weight: 400;
     font-size: 2.4rem;
@@ -296,6 +302,7 @@
   }
 
   .content {
+    width: 100%;
     max-width: 30rem;
     display: flex;
     flex-direction: column;
@@ -346,6 +353,8 @@
   }
 
   .headerTitle {
+    width: 100%;
+    text-align: center;
     color: #566dea;
     font-weight: 400;
     font-size: 2.4rem;
@@ -358,6 +367,7 @@
   }
 
   .content {
+    width: 100%;
     padding: 2.4rem 0;
     max-width: 32rem;
     display: flex;
