--- a/web/src/styles/pages/tutor/PetInfo.module.css
+++ b/web/src/styles/pages/tutor/PetInfo.module.css
@@ -59,18 +59,18 @@
   .wContainer svg {
     fill: #566dea;
   }
-  
-  .uploadInput{
+
+  .uploadInput {
     visibility: hidden;
     position: absolute;
-    top:0;
+    top: 0;
   }
 
-  .uploadButton svg{
+  .uploadButton svg {
     width: 5rem;
     height: auto;
   }
-  
+
   .uploadButton {
     margin: 0.8rem;
     width: 10rem;
@@ -93,11 +93,70 @@
     box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
 
-  .inputForm{
+  .inputForm {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1.4rem;
+  }
+  .border {
+    background-color: #fff;
+    border-radius: 0.8rem;
+
+    display: flex;
+    flex-direction: column;
+
+    margin: 0.8rem;
+
+    padding: 0.8rem;
+
+    width: 52rem;
+    height: 30rem;
+
+    border: 2px solid #566dea;
+  }
+
+  .bgDocumentContent {
+    width: 100%;
+    height: fit-content;
+    padding: 0.8rem;
+    border-radius: 0.8rem;
+    background-color: #566dea;
+
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+
+  .documentTitle {
+    color: #fff;
+  }
+
+  .petData {
+    display: flex;
+    flex-direction: row;
+    margin: 0.8rem 0;
+    gap: 0.8rem;
+  }
+
+  .imageFrame {
+    width: 18rem;
+    height: 21.5rem;
+    background-color: #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+  }
+
+  .qrCodeFrame {
+    width: 20rem;
+    height: 20rem;
+    border: 2px solid #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 /* Tablet */
@@ -162,17 +221,17 @@
     fill: #566dea;
   }
 
-  .uploadInput{
+  .uploadInput {
     visibility: hidden;
     position: absolute;
-    top:0;
+    top: 0;
   }
 
-  .uploadButton svg{
+  .uploadButton svg {
     width: 5rem;
     height: auto;
   }
-  
+
   .uploadButton {
     margin: 0.8rem;
     width: 10rem;
@@ -195,11 +254,70 @@
     box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
 
-  .inputForm{
+  .inputForm {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1.4rem;
+  }
+  .border {
+    background-color: #fff;
+    border-radius: 0.8rem;
+
+    display: flex;
+    flex-direction: column;
+
+    margin: 0.8rem;
+
+    padding: 0.8rem;
+
+    width: 52rem;
+    height: 30rem;
+
+    border: 2px solid #566dea;
+  }
+
+  .bgDocumentContent {
+    width: 100%;
+    height: fit-content;
+    padding: 0.8rem;
+    border-radius: 0.8rem;
+    background-color: #566dea;
+
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+
+  .documentTitle {
+    color: #fff;
+  }
+
+  .petData {
+    display: flex;
+    flex-direction: row;
+    margin: 0.8rem 0;
+    gap: 0.8rem;
+  }
+
+  .imageFrame {
+    width: 18rem;
+    height: 21.5rem;
+    background-color: #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+  }
+
+  .qrCodeFrame {
+    width: 20rem;
+    height: 20rem;
+    border: 2px solid #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 /* Celular */
@@ -264,14 +382,14 @@
   .wContainer svg {
     fill: #566dea;
   }
-  
-  .uploadInput{
+
+  .uploadInput {
     visibility: hidden;
     position: absolute;
-    top:0;
+    top: 0;
   }
 
-  .uploadButton svg{
+  .uploadButton svg {
     width: 4rem;
     height: auto;
   }
@@ -296,6 +414,65 @@
 
   .uploadButton:active {
     box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+  .border {
+    background-color: #fff;
+    border-radius: 0.8rem;
+
+    display: flex;
+    flex-direction: column;
+
+    margin: 0.8rem;
+
+    padding: 0.8rem;
+
+    width: 52rem;
+    height: 30rem;
+
+    border: 2px solid #566dea;
+  }
+
+  .bgDocumentContent {
+    width: 100%;
+    height: fit-content;
+    padding: 0.8rem;
+    border-radius: 0.8rem;
+    background-color: #566dea;
+
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+
+  .documentTitle {
+    color: #fff;
+  }
+
+  .petData {
+    display: flex;
+    flex-direction: row;
+    margin: 0.8rem 0;
+    gap: 0.8rem;
+  }
+
+  .imageFrame {
+    width: 18rem;
+    height: 21.5rem;
+    background-color: #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+  }
+
+  .qrCodeFrame {
+    width: 20rem;
+    height: 20rem;
+    border: 2px solid #566dea;
+    border-radius: 0.8rem;
+    padding: 0.4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
