--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -281,7 +281,7 @@ main {
   color: rgba(0, 0, 0, 0.85);
 }
 
-.video iframe{
+.videoIframe{
   max-width: 72rem;
   width: 100%;
   height: 41.2rem;
