--- a/web/src/styles/pages/LocalizaPet.module.css
+++ b/web/src/styles/pages/LocalizaPet.module.css
@@ -7,8 +7,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
   }
+  .navSpacer {
+    width: 100%;
+    height: 6rem;
+    background-color: #FFF;
+  }
+
   .content {
     position: relative;
     width: 100%;
