--- a/web/src/styles/components/Footer.module.css
+++ b/web/src/styles/components/Footer.module.css
@@ -1,25 +1,14 @@
 .footer {
-  background-color: #232323;
+  background-color: #1971C2;
   width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 4.8rem 4.8rem 4.8rem;
+  padding: 6.8rem 4.8rem;
 }
 
-.footerContent {
-  max-width: 300px;
-  padding: 1.4rem 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  font-weight: 700;
-}
-
-.footerContent > img {
+.footerLinks > img {
   width: 15rem;
   height: auto;
   margin: 0 0 1.4rem 0;
@@ -31,54 +20,66 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 0.4rem;
   color: #fff;
-  font-weight: 700;
+  font-weight: 300;
 }
 
-.footerLinks a {
-  margin: 0arem 0;
+.socialNetworks{
+  display: flex;
+  flex-direction: row;
+  gap: 0.8rem;
 }
-.footerContent svg {
+
+.socialNetworks svg {
   width: 28px;
   height: 28px;
   margin: 0 0.4rem;
+  color: #fff;
+  fill: #fff;
 }
 
 @media (max-width: 720px) {
-   .footer {
-    background-color: #232323;
+  .footer {
+    background-color: #1971C2;
     width: 100vw;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 0 4.8rem 2.8rem 4.8rem;
+    justify-content: space-between;
+    gap: 1.4rem;
+    padding: 6.8rem 4.8rem;
   }
-
-  .footerContent {
-    width: 100%;
-    margin-bottom: 4.5rem;
-  }
-  .footerContent > img {
-    width: 20rem;
+  
+  .footerLinks > img {
+    width: 15rem;
     height: auto;
-    margin: 0 0 0.8rem 0;
+    margin: 0 0 1.4rem 0;
   }
-  .footerContent > div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 0.4rem;
-    margin: 0.4rem 0;
-  }
-  .footerContent > div > a {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
+  
   .footerLinks {
-    display: none;
+    max-width: 300px;
+    padding: 1.4rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4rem;
+    color: #fff;
+    font-weight: 300;
+  }
+  
+  .socialNetworks{
+    display: flex;
+    flex-direction: row;
+    gap: 0.8rem;
+  }
+  
+  .socialNetworks svg {
+    width: 28px;
+    height: 28px;
+    margin: 0 0.4rem;
+    color: #fff;
+    fill: #fff;
   }
 }
