--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -65,13 +65,13 @@
 .formContainer h2 {
   max-width: 450px;
   font-weight: 600;
-  color: #566dea;
+  color: #1971c2;
 }
 
 .formContainer u {
   margin: 0.4rem 0;
   width: 4.8rem;
-  border-bottom: 4px solid #566dea;
+  border-bottom: 4px solid #1971c2;
 }
 
 .formContainer ul {
@@ -115,7 +115,7 @@
   color: #fff;
 
   border: none;
-  background-color: #566dea;
+  background-color: #1971c2;
   transition: filter 0.2s;
 }
 
@@ -124,6 +124,8 @@
 }
 
 main {
+  background-color: #f9f9f9;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -132,76 +134,119 @@ main {
 
 .cta {
   width: 100vw;
-  height: calc(100vh - 12.5rem);
+
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 12px;
+
+  padding: 4rem 12px;
   margin: 0 0 2.4rem 0;
-}
-
-.mobile {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-evenly;
-  margin: 2.4rem 0;
-}
-
-.mobile a > img {
-  width: 15rem;
-  height: auto;
-  border-radius: 0.8rem;
-  margin: 0;
+  background-color: #d0ebff;
 }
 
 .cta img {
   width: auto;
   height: calc(50vh + 18.6rem);
-  margin: 0 2.8rem;
+  margin-top: 4rem;
 }
 
-.cta .content {
+.rowContent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
-.cta .content h2 {
+.toptitle {
   max-width: 450px;
-  font-weight: 700;
-  font-size: 3rem;
-  color: #566dea;
+  margin-right: auto;
+  color: #1971c2;
 }
-.cta .content u {
-  margin: 0.4rem 0;
+
+.content h2 {
+  max-width: 500px;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 5rem;
+  color: #000;
+}
+.content u {
+  margin: 0.4rem auto 0 0;
   width: 4.8rem;
   border-bottom: 4px solid #6ca6fd;
 }
 
-.cta .content p {
+.contentSubtitle {
   max-width: 450px;
   margin: 1.4rem 0 2.8rem 0;
+  margin-right: auto;
   color: #6c757d;
 }
-.cta .content button {
+.content button {
   outline: none;
   border: none;
   display: block;
   text-align: center;
-  background-color: #566dea;
+  background-color: #1971c2;
   color: #fff !important;
-  padding: 1.4rem 0.8rem;
+  padding: 1.4rem 2.8rem;
   text-decoration: none !important;
-  border-radius: 10px;
+  border-radius: 3rem;
   text-decoration: none;
   box-shadow: 3px 3px 4px #b5b5b5;
   transition: all 0.3s ease;
+
+  margin-right: auto;
 }
 
-.cta .content button:hover {
+.content button:hover {
   background-color: #263481;
+}
+
+.ctaCards {
+  max-width: 980px;
+  width: 100%;
+  padding-block: 4rem;
+  margin-inline: auto;
+
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 0.6rem;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 6rem;
+  margin: -10rem 0 0 0;
+}
+
+.ctaCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ctaCard h3 {
+  font-size: 4.8rem;
+  color: #000;
+  line-height: 130%;
+
+  margin-bottom: 0.4rem;
+}
+
+.ctaCard p {
+  margin: 0;
+  color: #1971c2;
+  font-size: 1.6rem;
+  line-height: 150%;
+  text-align: center;
 }
 
 /* About */
@@ -237,7 +282,7 @@ main {
 .about .contentAbout u {
   margin: 0.4rem 0;
   width: 4.8rem;
-  border-bottom: 4px solid #566dea;
+  border-bottom: 4px solid #1971c2;
 }
 
 .about .contentAbout p {
@@ -250,7 +295,7 @@ main {
   border: none;
   display: block;
   text-align: center;
-  background-color: #566dea;
+  background-color: #1971c2;
   color: #fff !important;
   padding: 1.4rem 0.8rem;
   text-decoration: none !important;
@@ -265,67 +310,206 @@ main {
 }
 
 .video {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 12px;
-  margin: 0 0 2.4rem 0;
-}
-.video h2 {
-  margin-bottom: 2.4rem;
-  font-weight: 700;
-  font-size: 1.8rem;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.85);
-}
-
-.videoIframe{
-  max-width: 72rem;
+  max-width: 980px;
   width: 100%;
-  height: 41.2rem;
-  display: flex;
-  padding: 0.8rem;
-  margin: 1.4rem;
-  background-color: #566dea;
-  border-radius: 0.8rem;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  justify-content: center;
+  align-items: start;
+  gap: 3rem;
+
+  margin: 4rem 0;
 }
 
-.video button {
+.videoIframe {
+  max-width: 50rem;
+  width: 100%;
+  height: auto;
+  border-radius: 0.8rem;
+  overflow: hidden;
+}
+
+.videoContainer .titleVideoContainer {
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: #1971c2;
+}
+
+.videoContainer > h2 {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.85);
+  margin: 1.4rem 0;
+}
+
+.videoContainer .aboutText {
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: #384633;
+  margin: 1.4rem 0;
+}
+
+.videoContainer button {
   outline: none;
   border: none;
   display: block;
   text-align: center;
-  background-color: #566dea;
+  background-color: #1971c2;
   color: #fff !important;
-  padding: 1.4rem 0.8rem;
+  padding: 1.4rem 2.8rem;
   text-decoration: none !important;
-  border-radius: 10px;
+  border-radius: 3rem;
   text-decoration: none;
   box-shadow: 3px 3px 4px #b5b5b5;
   transition: all 0.3s ease;
+
+  margin-right: auto;
 }
 
-.video button:hover {
+.videoContainer button:hover {
   background-color: #263481;
+}
+
+.testemonials {
+  max-width: 980px;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 12px;
+  margin: 4rem 0;
+}
+
+.testemonials > p {
+  font-weight: 500;
+  font-size: 1.4rem;
+  text-align: center;
+  color: #1971c2;
+  margin-bottom: 2rem;
+}
+
+.testemonials > h2 {
+  max-width: 55rem;
+  margin-bottom: 4rem;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.testemonialsList {
+  display: flex;
+  flex-direction: row;
+  gap: 1.4rem;
+}
+
+.testemonial {
+  padding: 3.2rem;
+  border-radius: 1.4rem;
+  background-color: #f0f9ff;
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+
+.userInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.4rem;
+}
+
+.userInfo p {
+  font-weight: 500;
+  font-size: normal;
+  text-align: center;
+  color: #1971c2;
+}
+
+.userInfo img {
+  width: 6.4rem;
+  height: 6.4rem;
+  border-radius: 50%;
+  background-color: #fff;
+  background-position: center;
+  background-size: cover;
+}
+
+.contact {
+  max-width: 98rem;
+  width: 100%;
+  height: 25rem;
+  padding: 6rem;
+  margin: 6rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #1971c2;
+  border-radius: 1.4rem;
+}
+
+.contact h2 {
+  max-width: 50rem;
+  font-weight: 600;
+  font-size: 4rem;
+  line-height: 1;
+  color: #fff;
+  margin: 1.4rem 0;
+}
+
+.contact button {
+  outline: none;
+  border: none;
+  display: block;
+  text-align: center;
+  background-color: #fff;
+  color: #1971c2 !important;
+  padding: 1.4rem 2.8rem;
+  text-decoration: none !important;
+  border-radius: 3rem;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.contact button:hover {
+  background-color: #ccc;
 }
 
 .features {
   width: 100vw;
   max-width: 980px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   padding: 0 12px;
-  margin: 2.4rem 0;
+  margin: 4rem 0;
 }
 
-.features h2 {
-  margin-bottom: 2.4rem;
+.features > p {
+  font-weight: 500;
+  font-size: 1.4rem;
+  text-align: center;
+  color: #1971c2;
+  margin-bottom: 2rem;
+}
+
+.features > h2 {
+  max-width: 55rem;
+  margin-bottom: 4rem;
   font-weight: 700;
-  font-size: 1.8rem;
+  font-size: 4rem;
+  line-height: 1.2;
   text-align: center;
   color: rgba(0, 0, 0, 0.85);
 }
@@ -333,34 +517,47 @@ main {
 .cardList {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 0.8rem;
   align-items: center;
   justify-content: center;
-  gap: 2.4rem;
+  gap: 1.8rem;
 }
 
 .card {
   cursor: pointer;
-  padding: 1.4rem;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3);
+  padding: 2.4rem;
   border-radius: 0.8rem;
+  background-color: #fff;
+  border: 1px solid #f0f9ff;
   transition: 0.2s;
   width: 100%;
   height: 100%;
-}
 
-.card:hover {
-  box-shadow: 0 15px 18px 0 rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
-
+.cardIcon {
+  width: 2.4rem;
+  height: 2.4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #f0f9ff;
+  border-radius: 50%;
+}
 .card h2 {
   margin: 1.4rem 0;
-  font-weight: 400;
-  font-size: x-large;
+  font-weight: 600;
+  font-size: 2.4rem;
+  line-height: 1;
 }
 
 .card p {
-  margin: 1.4rem 0;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.2;
 }
 
 .how {
@@ -414,7 +611,7 @@ main {
   background-color: #232323;
   padding: 0.8rem 4.8rem;
   text-align: center;
-  border: 3px solid #566dea;
+  border: 3px solid #1971c2;
   color: #fff !important;
   font-weight: 700;
   font-size: 1.4rem;
@@ -427,7 +624,7 @@ main {
   border: 3px solid #263481;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 980px) {
   .formGroup {
     display: flex;
     flex-direction: column;
@@ -436,7 +633,7 @@ main {
     justify-content: center;
   }
   .formGroup label {
-    color: #566dea;
+    color: #1971c2;
     opacity: 1 !important;
     font-weight: 600;
     margin: 0.8rem 0;
@@ -450,7 +647,7 @@ main {
     border: none;
     display: block;
     text-align: center;
-    background-color: #566dea;
+    background-color: #1971c2;
     color: #fff !important;
     padding: 1.4rem 0.8rem;
     text-decoration: none !important;
@@ -466,31 +663,41 @@ main {
 
   .cta {
     width: 100vw;
+    height: auto;
+
+    padding-top: 8rem;
+
     display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    padding: 0 12px;
-    margin: 0 0 2.4rem 0;
-  }
-  .cta img {
-    height: 40vh;
-    width: auto;
   }
 
-  .cta .content {
+  .cta img {
+    margin: 1.4rem 0;
+    width: 60vw;
+    height: auto;
+  }
+
+  .rowContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .ctaCards {
+    max-width: 80vw;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -15rem;
+  }
+
+  .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-  }
-
-  .mobile {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-    margin: 1.4rem 0;
   }
 
   .about {
@@ -534,5 +741,65 @@ main {
     justify-content: center;
     padding: 0 4.8rem 2.4rem 4.8rem;
     margin: -3rem 0 0 0;
+  }
+
+  .contact {
+    max-width: 90vw;
+    width: 100%;
+    height: fit-content;
+    padding: 6rem;
+    margin: 6rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 1.4rem;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #1971c2;
+    border-radius: 1.4rem;
+  }
+
+  .video {
+    max-width: 90vw;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column-reverse;
+
+    gap: 3rem;
+
+    text-align: center;
+    align-items: center;
+
+    margin: 4rem 0;
+  }
+
+  .videoContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .videoContainer button {
+    margin: 0;
+
+    outline: none;
+    border: none;
+    display: flex;
+    text-align: center;
+    background-color: #1971c2;
+    color: #fff !important;
+    padding: 1.4rem 2.8rem;
+    text-decoration: none !important;
+    border-radius: 3rem;
+    text-decoration: none;
+    box-shadow: 3px 3px 4px #b5b5b5;
+    transition: all 0.3s ease;
+  }
+
+  .testemonialsList {
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
   }
 }
