--- a/web/src/styles/pages/Veterinario.module.css
+++ b/web/src/styles/pages/Veterinario.module.css
@@ -9,22 +9,6 @@
   color: #000;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 2.4rem;
-  padding: 2.8rem 4.8rem;
-  border-bottom: 1px solid #ddd;
-  margin-bottom: 1.4rem;
-}
-
-.navImage {
-  width: 15rem;
-  height: auto;
-}
-
 .modalCta {
   width: 100vw;
   height: 100vh;
@@ -81,13 +65,13 @@
 .formContainer h2 {
   max-width: 450px;
   font-weight: 600;
-  color: #566dea;
+  color: #1971c2;
 }
 
 .formContainer u {
   margin: 0.4rem 0;
   width: 4.8rem;
-  border-bottom: 4px solid #566dea;
+  border-bottom: 4px solid #1971c2;
 }
 
 .formContainer ul {
@@ -131,7 +115,7 @@
   color: #fff;
 
   border: none;
-  background-color: #566dea;
+  background-color: #1971c2;
   transition: filter 0.2s;
 }
 
@@ -140,6 +124,8 @@
 }
 
 main {
+  background-color: #f9f9f9;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -148,76 +134,119 @@ main {
 
 .cta {
   width: 100vw;
-  height: calc(100vh - 12.5rem);
+  height: 100vh;
+
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 12px;
+
+  padding: 4rem 12px;
   margin: 0 0 2.4rem 0;
-}
-
-.mobile {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-evenly;
-  margin: 2.4rem 0;
-}
-
-.mobile a > img {
-  width: 15rem;
-  height: auto;
-  border-radius: 0.8rem;
-  margin: 0;
+  background-color: #d0ebff;
 }
 
 .cta img {
   width: auto;
   height: calc(50vh + 18.6rem);
-  margin: 0 2.8rem;
 }
 
-.cta .content {
+.rowContent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
-.cta .content h2 {
+.toptitle {
   max-width: 450px;
-  font-weight: 700;
-  font-size: 3rem;
-  color: #566dea;
+  margin-right: auto;
+  color: #1971c2;
 }
-.cta .content u {
-  margin: 0.4rem 0;
+
+.content h2 {
+  max-width: 500px;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 5rem;
+  color: #000;
+}
+.content u {
+  margin: 0.4rem auto 0 0;
   width: 4.8rem;
   border-bottom: 4px solid #6ca6fd;
 }
 
-.cta .content p {
+.contentSubtitle {
   max-width: 450px;
   margin: 1.4rem 0 2.8rem 0;
+  margin-right: auto;
   color: #6c757d;
 }
-.cta .content button {
+.content button {
   outline: none;
   border: none;
   display: block;
   text-align: center;
-  background-color: #566dea;
+  background-color: #1971c2;
   color: #fff !important;
-  padding: 1.4rem 0.8rem;
+  padding: 1.4rem 2.8rem;
   text-decoration: none !important;
-  border-radius: 10px;
+  border-radius: 3rem;
   text-decoration: none;
   box-shadow: 3px 3px 4px #b5b5b5;
   transition: all 0.3s ease;
+
+  margin-right: auto;
 }
 
-.cta .content button:hover {
+.content button:hover {
   background-color: #263481;
+}
+
+.ctaCards {
+  max-width: 980px;
+  width: 100%;
+  padding-block: 4rem;
+  margin-inline: auto;
+
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 0.6rem;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 6rem;
+  margin: -10rem 0 0 0;
+}
+
+.ctaCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ctaCard h3 {
+  font-size: 4.8rem;
+  color: #000;
+  line-height: 130%;
+
+  margin-bottom: 0.4rem;
+}
+
+.ctaCard p {
+  margin: 0;
+  color: #1971c2;
+  font-size: 1.6rem;
+  line-height: 150%;
+  text-align: center;
 }
 
 /* About */
@@ -229,153 +258,334 @@ main {
   align-items: center;
   justify-content: center;
   padding: 0 12px;
-  margin: 4.4rem 0;
+  margin: 0 0 2.4rem 0;
 }
 
 .about img {
   width: auto;
-  height: calc(100vh - 48.6rem);
+  height: calc(100vh - 8.6rem);
   margin: 0 2.8rem;
 }
 
-.contentAbout {
+.about .contentAbout {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.contentAbout h2 {
-  max-width: 450px;
+.about .contentAbout h2 {
+  max-width: 500px;
   font-weight: 700;
-  font-size: 3rem;
-  color: #566dea;
+  font-size: 2.4rem;
+  color: rgba(0, 0, 0, 0.85);
 }
-
-.contentAbout u {
+.about .contentAbout u {
   margin: 0.4rem 0;
   width: 4.8rem;
-  border-bottom: 4px solid #566dea;
+  border-bottom: 4px solid #1971c2;
 }
 
-.contentAbout p {
-  max-width: 450px;
+.about .contentAbout p {
+  max-width: 500px;
   margin: 1.4rem 0 2.8rem 0;
   color: #6c757d;
+}
+.about .contentAbout button {
+  outline: none;
+  border: none;
+  display: block;
+  text-align: center;
+  background-color: #1971c2;
+  color: #fff !important;
+  padding: 1.4rem 0.8rem;
+  text-decoration: none !important;
+  border-radius: 10px;
+  text-decoration: none;
+  box-shadow: 3px 3px 4px #b5b5b5;
+  transition: all 0.3s ease;
+}
+
+.about .contentAbout button:hover {
+  background-color: #263481;
+}
+
+.video {
+  max-width: 980px;
+  width: 100%;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  justify-content: center;
+  align-items: start;
+  gap: 3rem;
+
+  margin: 4rem 0;
+}
+
+.videoIframe {
+  max-width: 50rem;
+  width: 100%;
+  height: auto;
+  border-radius: 0.8rem;
+  overflow: hidden;
+}
+
+.videoContainer .titleVideoContainer {
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: #1971c2;
+}
+
+.videoContainer > h2 {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.85);
+  margin: 1.4rem 0;
+}
+
+.videoContainer .aboutText {
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: #384633;
+  margin: 1.4rem 0;
+}
+
+.videoContainer button {
+  outline: none;
+  border: none;
+  display: block;
+  text-align: center;
+  background-color: #1971c2;
+  color: #fff !important;
+  padding: 1.4rem 2.8rem;
+  text-decoration: none !important;
+  border-radius: 3rem;
+  text-decoration: none;
+  box-shadow: 3px 3px 4px #b5b5b5;
+  transition: all 0.3s ease;
+
+  margin-right: auto;
+}
+
+.videoContainer button:hover {
+  background-color: #263481;
+}
+
+.testemonials {
+  max-width: 980px;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 12px;
+  margin: 4rem 0;
+}
+
+.testemonials > p {
+  font-weight: 500;
+  font-size: 1.4rem;
+  text-align: center;
+  color: #1971c2;
+  margin-bottom: 2rem;
+}
+
+.testemonials > h2 {
+  max-width: 55rem;
+  margin-bottom: 4rem;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.testemonialsList {
+  display: flex;
+  flex-direction: row;
+  gap: 1.4rem;
+}
+
+.testemonial {
+  padding: 3.2rem;
+  border-radius: 1.4rem;
+  background-color: #f0f9ff;
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+
+.userInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.4rem;
+}
+
+.userInfo p {
+  font-weight: 500;
+  font-size: normal;
+  text-align: center;
+  color: #1971c2;
+}
+
+.userInfo img {
+  width: 6.4rem;
+  height: 6.4rem;
+  border-radius: 50%;
+  background-color: #fff;
+  background-position: center;
+  background-size: cover;
+}
+
+.contact {
+  max-width: 98rem;
+  width: 100%;
+  height: 25rem;
+  padding: 6rem;
+  margin: 6rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #1971c2;
+  border-radius: 1.4rem;
+}
+
+.contact h2 {
+  max-width: 50rem;
+  font-weight: 600;
+  font-size: 4rem;
+  line-height: 1;
+  color: #fff;
+  margin: 1.4rem 0;
+}
+
+.contact button {
+  outline: none;
+  border: none;
+  display: block;
+  text-align: center;
+  background-color: #fff;
+  color: #1971c2 !important;
+  padding: 1.4rem 2.8rem;
+  text-decoration: none !important;
+  border-radius: 3rem;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.contact button:hover {
+  background-color: #ccc;
 }
 
 .features {
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 2.4rem 2.4rem 0 0;
-  background-color: #566dea;
-
-  background-image: url(../../assets/icon_white.png);
-  background-repeat: no-repeat;
-  background-position: 150rem 60rem;
-}
-
-.featuresContainer {
   max-width: 980px;
-  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.4rem;
+
   padding: 0 12px;
-  margin: 2.4rem 0 0 0;
+  margin: 4rem 0;
 }
 
-.featuresContainer h2 {
-  margin-bottom: 1.8rem;
-  font-weight: 600;
-  font-size: 3.8rem;
-  text-align: center;
-  color: #fff;
-}
-
-.featuresButtonContainer {
-  width: 100%;
-  padding: 1.4rem 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.featuresButton {
-  border: none;
-  background-color: #566dea;
-  border-radius: 10px;
-  padding: 1.4rem 4.8rem;
-
-  text-align: center;
-  color: #fff !important;
-  font-weight: 400;
+.features > p {
+  font-weight: 500;
   font-size: 1.4rem;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 1.4rem;
-
-  transition: 0.3s;
+  text-align: center;
+  color: #1971c2;
+  margin-bottom: 2rem;
 }
 
-.featuresButton:hover {
-  filter: brightness(0.9);
+.features > h2 {
+  max-width: 55rem;
+  margin-bottom: 4rem;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.85);
 }
 
 .cardList {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 0.8rem;
   align-items: center;
   justify-content: center;
-  gap: 2.4rem;
+  gap: 1.8rem;
 }
 
 .card {
-  width: 100%;
-  height: 100%;
-
   cursor: pointer;
   padding: 2.4rem;
-
-  background-color: #fff;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3);
   border-radius: 0.8rem;
+  background-color: #fff;
+  border: 1px solid #f0f9ff;
   transition: 0.2s;
+  width: 100%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 1.4rem;
 }
-
-.card:hover {
-  box-shadow: 0 15px 18px 0 rgba(0, 0, 0, 0.3);
+.cardIcon {
+  width: 2.4rem;
+  height: 2.4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #f0f9ff;
+  border-radius: 50%;
 }
-
 .card h2 {
-  text-align: left;
+  margin: 1.4rem 0;
   font-weight: 600;
-  color: #566dea;
-  font-size: large;
+  font-size: 2.4rem;
+  line-height: 1;
 }
 
 .card p {
-  margin: 1.4rem 0;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.2;
 }
 
-.featuresContainer img {
+.how {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 12px;
+  margin: 2.4rem 0 0 0;
+}
+.how img {
   width: 70vw;
   height: auto;
+}
+
+.how h2 {
+  text-align: center;
+  margin-bottom: 2.4rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.how p {
+  max-width: 800px;
+  text-align: center;
+  margin-bottom: 2.4rem;
 }
 
 .cta2 {
@@ -401,7 +611,7 @@ main {
   background-color: #232323;
   padding: 0.8rem 4.8rem;
   text-align: center;
-  border: 3px solid #566dea;
+  border: 3px solid #1971c2;
   color: #fff !important;
   font-weight: 700;
   font-size: 1.4rem;
@@ -414,53 +624,7 @@ main {
   border: 3px solid #263481;
 }
 
-.container footer {
-  background-color: #232323;
-  width: 100vw;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 4.8rem 4.8rem 4.8rem;
-}
-
-.footerContent {
-  max-width: 300px;
-  padding: 1.4rem 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  font-weight: 700;
-}
-
-.footerContent > img {
-  width: 15rem;
-  height: auto;
-  margin: 0 0 1.4rem 0;
-}
-
-.footerLinks {
-  max-width: 300px;
-  padding: 1.4rem 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: #fff;
-  font-weight: 700;
-}
-
-.footerLinks a {
-  margin: 0arem 0;
-}
-.footerContent svg {
-  width: 28px;
-  height: 28px;
-  margin: 0 0.4rem;
-}
-
-@media (max-width: 720px) {
+@media (max-width: 980px) {
   .formGroup {
     display: flex;
     flex-direction: column;
@@ -469,7 +633,7 @@ main {
     justify-content: center;
   }
   .formGroup label {
-    color: #566dea;
+    color: #1971c2;
     opacity: 1 !important;
     font-weight: 600;
     margin: 0.8rem 0;
@@ -483,7 +647,7 @@ main {
     border: none;
     display: block;
     text-align: center;
-    background-color: #566dea;
+    background-color: #1971c2;
     color: #fff !important;
     padding: 1.4rem 0.8rem;
     text-decoration: none !important;
@@ -499,31 +663,41 @@ main {
 
   .cta {
     width: 100vw;
+    height: auto;
+
+    padding-top: 8rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .cta img {
+    margin: 1.4rem 0;
+    width: 60vw;
+    height: auto;
+  }
+
+  .rowContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .ctaCards {
+    max-width: 80vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 0 12px;
-    margin: 0 0 2.4rem 0;
-  }
-  .cta img {
-    height: 40vh;
-    width: auto;
+    margin-top: -15rem;
   }
 
-  .cta .content {
+  .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-  }
-
-  .mobile {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-    margin: 1.4rem 0;
   }
 
   .about {
@@ -537,24 +711,9 @@ main {
   }
 
   .about img {
-    width: 80vw;
-    height: auto;
+    width: auto;
+    height: 50vh;
     margin: 0 2.8rem;
-  }
-
-  .featuresContainer h2 {
-    margin-bottom: 1.8rem;
-    font-weight: 600;
-    font-size: 1.8rem;
-    text-align: center;
-    color: #fff;
-  }
-
-  .card h2 {
-    text-align: left;
-    font-weight: 600;
-    color: #566dea;
-    font-size: large;
   }
 
   .cardList {
@@ -567,7 +726,7 @@ main {
     gap: 2.4rem;
   }
 
-  .featuresContainer img {
+  .how img {
     width: 100vw;
     height: auto;
   }
@@ -584,40 +743,63 @@ main {
     margin: -3rem 0 0 0;
   }
 
-  .container footer {
-    background-color: #232323;
-    width: 100vw;
+  .contact {
+    max-width: 90vw;
+    width: 100%;
+    height: fit-content;
+    padding: 6rem;
+    margin: 6rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    text-align: center;
+    gap: 1.4rem;
     align-items: center;
-    justify-content: center;
-    padding: 0 4.8rem 2.8rem 4.8rem;
+    justify-content: space-between;
+    background-color: #1971c2;
+    border-radius: 1.4rem;
   }
 
-  .footerContent {
+  .video {
+    max-width: 90vw;
     width: 100%;
-    margin-bottom: 4.5rem;
-  }
-  .footerContent > img {
-    width: 20rem;
-    height: auto;
-    margin: 0 0 0.8rem 0;
-  }
-  .footerContent > div {
+
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
+
+    gap: 3rem;
+
+    text-align: center;
     align-items: center;
-    justify-content: center;
-    gap: 0.4rem;
-    margin: 0.4rem 0;
+
+    margin: 4rem 0;
   }
-  .footerContent > div > a {
+
+  .videoContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
   }
-  .footerLinks {
-    display: none;
+
+  .videoContainer button {
+    margin: 0;
+
+    outline: none;
+    border: none;
+    display: flex;
+    text-align: center;
+    background-color: #1971c2;
+    color: #fff !important;
+    padding: 1.4rem 2.8rem;
+    text-decoration: none !important;
+    border-radius: 3rem;
+    text-decoration: none;
+    box-shadow: 3px 3px 4px #b5b5b5;
+    transition: all 0.3s ease;
+  }
+
+  .testemonialsList {
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
   }
 }
